# flexprep

./: .pre-commit-config.yaml  Dockerfile  HISTORY.rst  Jenkinsfile  README.md  README.rst  environment.yml  pyproject.toml  sonar-project.properties  test_ci.sh
app/: app.py  app_retrieve_from_s3.py
aviso/: README.md  aggregator_flexpart.py  config_flexpart.yaml  listener_diss.yaml  run_docker_script.sh
doc/: Makefile  conf.py  index.rst
flexprep/: __init__.py  __main__.py
flexprep/config/: service_settings.py  settings.yaml
flexprep/config/aviso/: README.md  config.yaml  listener_diss.yaml  run_docker_script.sh
flexprep/domain/: data_model.py  db_utils.py  flexpart_utils.py  prepare_processing.py  processing.py  s3_utils.py  validation_utils.py
flexprep/services/: processing_service.py
k8s/base/: configmap.yaml  job.yaml
k8s/overlays/flexpart_ifs-depl/: kustomization.yaml
k8s/overlays/flexpart_ifs-devt/: configmap.yaml  kustomization.yaml
k8s/overlays/flexpart_ifs-prod/: kustomization.yaml
pilotecmwf_pp_starter/: __init__.py  __main__.py
pilotecmwf_pp_starter/config/: service_settings.py  settings.yaml
pilotecmwf_pp_starter/domain/: greeting.py  prepare_processing.py  processing.py  s3_utils.py
pilotecmwf_pp_starter/services/: greeting_service.py  processing_service.py
test/domain/: test_flexpart_utils.py  test_prepare_processing.py  test_processing.py  test_s3_utils.py  test_validation_utils.py
test/services/: test_greeting_service.py
