[[tool.poetry.source]]
name = "meteoswiss"
url = "https://hub.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "default"


[tool.poetry]
name = "flexprep"
version = "1.0.0"
description = "processing"
authors = ["Nina Burgdorfer <nina.burgdorfer@meteoswiss.ch>"]
readme = "README.rst"
include = ["HISTORY.rst"]

[tool.poetry.dependencies]
python = "~3.11"
mch-python-commons = { extras = ["fastapi"], version = "^1.5.1" }
click = ">=8.1.2"
boto3 = "^1.34.115"
jinja2 = ">=3.1.1"
numpy = "^1.26.4"
xarray = ">=2023.4.1"
eccodes = "~1.5"
urllib3 = ">=1.25.4,<1.27"
meteodatalab = { url = "https://github.com/MeteoSwiss/meteodata-lab/archive/239df34a59ca9fdc7801aa298f3c3feffcdb22c5.zip" }
pyfdb = { url = "https://github.com/ecmwf/pyfdb/archive/refs/tags/0.0.3.zip" }



[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
codespell = "^2.3.0"
flake8 = "^7.1.0"
pytest-cov = "*"
pylint = "*"
yapf = "*"
mypy = "*"
sphinx = "*"
importlib_resources = "*"
pydata-sphinx-theme = "*"
sphinx-autoapi = "*"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88

[tool.isort]
default_section = "THIRDPARTY"
profile = "black"

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pylint.master]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
]

[tool.pylint.basic]
argument-naming-style = 'any'
attr-naming-style = 'any'

[tool.pylint.format]
# Maximum number of lines in a module.
max-line-length = 120

[tool.pylint.design]
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# to avoid mypy errors when importing modules from commons
# aka "module is installed, but missing library stubs or py.typed marker"
module = ["mch_python_commons.*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
